--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Python HTML</title>
+    <title>{{ title }} - Microblog</title>
 </head>
 <body>
-    <h1>Olá Mundo</h1>
+    <h1>Olá, {{ user.username }}!</h1>
 </body>
 </html>
